--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="BookCars Rental Service" />
+    <meta name="description" content="RCLR Service" />
     <link rel="manifest" href="/manifest.json" />
-    <title>BookCars Rental Service</title>
+    <title>RCLR</title>
   </head>
 
   <body>
